@startuml ChatApp_PresenceRealtime
'==============================================================
' Diagrama 5: Prezenta, status si comunicatie real-time
' Flux: Controller -> Service -> Repository -> Entity
'==============================================================

skinparam monochrome true
skinparam shadowing false
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam defaultFontName "Arial"
skinparam packageStyle rectangle
skinparam nodesep 35
skinparam ranksep 55

hide circle

top to bottom direction

title Prezenta, status utilizator si WebSocket

package "controller" as PC {
    class UserStatusController {
        + setStatus(req) : UserStatusDto
        + getMyStatus() : UserStatusDto
        + getUserStatus(userId) : UserStatusDto
    }
    class ChatWebSocketController {
        + sendTypingIndicator(dto, principal) : void
    }
}

package "service" as PS {
    class UserStatusService {
        + setUserStatus(u, text, type) : UserStatusDto
        + getUserStatus(userId) : UserStatusDto
        + resetStatus(userId) : void
        + initializeUserStatus(u) : UserStatus
    }
}

package "repository" as PR {
    interface UserStatusRepository <<JpaRepository>>
    interface UserRepository <<JpaRepository>>
}

package "entity" as PE {
    class User
    class UserStatus
}

package "config (WebSocket)" as PCfg {
    class WebSocketConfig {
        + configureMessageBroker(reg) : void
        + registerStompEndpoints(reg) : void
    }
    class PresenceListener {
        + onConnect(ev) : void
        + onDisconnect(ev) : void
    }
}

package "security" as PSec {
    class WebSocketAuthInterceptor
}

package "dto (records)" as PD {
    class UserStatusDto <<record>>
    class SetStatusRequest <<record>>
    class TypingIndicatorDto <<record>>
}

class SimpMessagingTemplate <<Spring>>

' Aliniere ---------------------------------------------------
UserStatusController -[hidden]right- ChatWebSocketController
UserStatusRepository -[hidden]right- UserRepository
User -[hidden]right- UserStatus
WebSocketConfig -[hidden]right- PresenceListener
UserStatusDto -[hidden]down- SetStatusRequest
SetStatusRequest -[hidden]down- TypingIndicatorDto

' Flux principal ---------------------------------------------
UserStatusController --> UserStatusService
UserStatusService --> UserStatusRepository
UserStatusService --> UserRepository
UserStatusRepository ..> UserStatus
UserRepository ..> User

' Real-time / WebSocket --------------------------------------
WebSocketConfig --> WebSocketAuthInterceptor
PresenceListener --> UserRepository
PresenceListener --> SimpMessagingTemplate : broadcast online/offline
ChatWebSocketController --> SimpMessagingTemplate

' DTOs in lateral --------------------------------------------
UserStatusController ..> PD : foloseste
ChatWebSocketController ..> TypingIndicatorDto

' Plasare ----------------------------------------------------
PC -[hidden]right- PD
PS -[hidden]right- PCfg

@enduml
